Fixed missing line

--- a/kaggle-keras-cnn.ipynb
+++ b/kaggle-keras-cnn.ipynb
@@ -141,8 +141,7 @@
     "    start = x // 2 - (size // 2)\n",
     "    end = start + size\n",
     "    \n",
-    "    return img [start:end, start:end]\n",
-    "    \n",
+    "    return img [start:end, start:end]    \n",
     "\n",
     "def wiggle_image(img, angle_range = 20, transform_range = 10, scale_range = (1, 1.7)):\n",
     "    new_img = img.reshape(28, 28)\n",
@@ -327,16 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-31-d395ae47f09b>, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-31-d395ae47f09b>\"\u001b[1;36m, line \u001b[1;32m7\u001b[0m\n\u001b[1;33m    print(\"Predicted:\", p)\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: 3\n"
      ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAEICAYAAACQ6CLfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADxdJREFUeJzt3X+sVHV6x/HPU9ACLhivXG8IGFkpakilrJkgBN3YkBKl\niaB/GDRZqVrZP3QtZqs1Wwsmpgk07prdpIHcBQLbbN1uAkZUoFEgURu1jISfYv0VzAJXuMSGH01g\nhX36xxw3V7zznWHmzJy5Pu9XcnNnznMO58nAhzNzvufM19xdAOL5k6IbAFAMwg8ERfiBoAg/EBTh\nB4Ii/EBQhB8IivAHZ2ZuZv9nZv9c5/oPmdnpbLs/a3V/aB3jIp/YzMwlTXb3j7PnYyW9JOkGScMl\nvS/p7939v1LbYegZXnQD6DinJf2tpI8knZc0T9LLZnaVu58rtDPkirf9+Bp3P+PuB7Kgmyr/AVwh\nqavYzpA3jvwYlJntUeWt/yWSVrn7sYJbQs4IPwbl7lPNbISkuyRdWnQ/yB/hR1XufkbSC2Z2wMx2\nufvuontCfvjMj3pcIunaoptAvjjy42vMbIYq/y7+W9IwSY9J6pH0bpF9IX+EHxf6U0m/UOVI/6Wk\nvZL+2t2PFNoVcsdFPsGZ2RlJZyX9wt3/qY71H5D0vKQRkqa4+6ctbhEtQviBoDjhBwRF+IGg2nrC\nb+zYsT5x4sR27hII5eDBgzp+/LjVs25T4Tez2yX9XJUhoVXuviy1/sSJE1Uul5vZJYCEUqlU97oN\nv+03s2GS/lXSHZKmSLrXzKY0+ucBaK9mPvNPl/Sxu3/q7r+X9BtVbv8EMAQ0E/7xkn434PmhbNnX\nmNkiMyubWbm/v7+J3QHIU8vP9rt7r7uX3L3U3d3d6t0BqFMz4T8s6eoBzydkywAMAc2Ef4ekyWb2\nXTO7VNICSRvzaQtAqzU81Ofu58zsUUn/qcpQ3xp3359bZwBaqqlxfnffJGlTTr0AaCMu7wWCIvxA\nUIQfCIrwA0ERfiAowg8ERfiBoAg/EBThB4Ii/EBQhB8IivADQRF+ICjCDwRF+IGgCD8QFOEHgiL8\nQFCEHwiK8ANBEX4gqLZO0Y3Oc+TIkWT9lVdeSdbXrVuXrL/99ttVa9dff31y2y1btiTr11xzTbKO\nNI78QFCEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4/xDwO7du5P15cuXV61t27Ytue3JkyeT9bNnzybr\ntZhZ1dqHH36Y3Pa6665L1vv6+pL1rq6uZD26psJvZgclnZJ0XtI5dy/l0RSA1svjyP+X7n48hz8H\nQBvxmR8Iqtnwu6TXzew9M1s02ApmtsjMymZW7u/vb3J3APLSbPhvcfdpku6Q9IiZff/CFdy9191L\n7l7q7u5ucncA8tJU+N39cPb7mKQXJU3PoykArddw+M3sMjMb/dVjSXMk7curMQCt1czZ/h5JL2bj\nuMMl/bu7p2/ARkMee+yxZP2tt95q+M9292Q9NU5fj2HDhlWtjRo1KrltrWsQHnzwwWR9/fr1DfUV\nRcPhd/dPJf1Fjr0AaCOG+oCgCD8QFOEHgiL8QFCEHwiKW3qHgNmzZyfrqaG+ESNGJLcdPXp0sn73\n3Xcn6+PHj0/W77///qq1Wr3Nnz8/WX/55ZeT9RMnTlStcbsvR34gLMIPBEX4gaAIPxAU4QeCIvxA\nUIQfCIpx/iHg0UcfTdZT4+Fjx45NbltrnH/kyJHJ+vDhrfsnNHXq1GT9nXfeadm+I+DIDwRF+IGg\nCD8QFOEHgiL8QFCEHwiK8ANBMc4/BNS697yZe9PL5XKyfuONNybrtcb5z58/X7VW6/qFlStXJuvN\nfq14dBz5gaAIPxAU4QeCIvxAUIQfCIrwA0ERfiAoxvmDW7ZsWbLe29ubrG/fvj1Zf/LJJ6vW9u/f\nn9y21jj+5Zdfnqy38rsGvg1qHvnNbI2ZHTOzfQOWdZnZa2b2Ufb7ita2CSBv9bztXyvp9guWPSVp\nq7tPlrQ1ew5gCKkZfnd/Q9IXFyyeJ2ld9nidpPS8SgA6TqMn/HrcvS97/LmknmormtkiMyubWbm/\nv7/B3QHIW9Nn+93dJXmi3uvuJXcvdXd3N7s7ADlpNPxHzWycJGW/j+XXEoB2aDT8GyUtzB4vlPRS\nPu0AaJeaA6Fm9oKk2ySNNbNDkpZKWibpt2b2kKTPJN3TyiaRtnnz5qq1rVu3JrfdsGFDsr5t27Zk\n/cSJE8l6K61evTpZHzNmTJs6GZpqht/d761Smp1zLwDaiMt7gaAIPxAU4QeCIvxAUIQfCIp7HoeA\nkydPJuv33Xdfw9vWUuRQ3ptvvpmsz5w5s02dfDtx5AeCIvxAUIQfCIrwA0ERfiAowg8ERfiBoBjn\nHwK+/PLLZL3Zsfxm1Pr67OXLl1et3Xzzzcltp06d2lBPqA9HfiAowg8ERfiBoAg/EBThB4Ii/EBQ\nhB8IinH+IeDKK69M1h944IGqtTVr1iS3rUy4VN2cOXOS9S1btiTr6Fwc+YGgCD8QFOEHgiL8QFCE\nHwiK8ANBEX4gKMb5vwVWrlxZtfbwww8nt50/f36yvn379mR948aNyfqdd96ZrKM4NY/8ZrbGzI6Z\n2b4By54xs8Nmtiv7mdvaNgHkrZ63/Wsl3T7I8ufdfVr2synftgC0Ws3wu/sbkr5oQy8A2qiZE34/\nMrM92ceCK6qtZGaLzKxsZuX+/v4mdgcgT42Gf4WkayVNk9Qn6afVVnT3XncvuXupu7u7wd0ByFtD\n4Xf3o+5+3t3/IOmXkqbn2xaAVmso/GY2bsDTuyTtq7YugM5Uc5zfzF6QdJuksWZ2SNJSSbeZ2TRJ\nLumgpB+2sEfUMHx49b/GWt+Nv379+mT91ltvTdaXLFmSrDPO37lqht/d7x1k8eoW9AKgjbi8FwiK\n8ANBEX4gKMIPBEX4gaC4pTe4SZMmJeuzZs1K1nfu3JmsHzp0qGptwoQJyW3RWhz5gaAIPxAU4QeC\nIvxAUIQfCIrwA0ERfiAoxvmD6+npSdafe+65ZH3mzJnJ+tq1a6vWnn766eS2aC2O/EBQhB8IivAD\nQRF+ICjCDwRF+IGgCD8QFOP8mdOnTyfrzz77bNXa0qVLk9uOGjWqoZ46wVVXXZWsu3uyfvjw4Tzb\nQY448gNBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUPVM0X21pF9J6lFlSu5ed/+5mXVJ+g9JE1WZpvse\nd//f1rXaWmfPnk3WU/e1jxkzJrnt448/nqwXeR3AmTNnkvVXX301WTezZP3UqVMX3RPao54j/zlJ\nP3b3KZJmSHrEzKZIekrSVnefLGlr9hzAEFEz/O7e5+47s8enJB2QNF7SPEnrstXWSZrfqiYB5O+i\nPvOb2URJ35P0rqQed+/LSp+r8rEAwBBRd/jN7DuS1kta7O4nB9a8coH3oBd5m9kiMyubWbm/v7+p\nZgHkp67wm9klqgT/1+6+IVt81MzGZfVxko4Ntq2797p7yd1L3d3defQMIAc1w2+V07mrJR1w958N\nKG2UtDB7vFDSS/m3B6BV6rmld5akH0jaa2a7smU/kbRM0m/N7CFJn0m6pzUtdr4lS5Yk6ytWrEjW\nu7q6kvUZM2Yk6wsWLKha++CDD5Lbbtq0KVnfvHlzsl7LDTfc0NT2aJ2a4Xf3tyRVG8ydnW87ANqF\nK/yAoAg/EBThB4Ii/EBQhB8IivADQfHV3ZmRI0cm65MmTapa++STT5LbHjlyJFnv6+tL1vfv35+s\nr169OllPqfXV27Vu2R02bFiyftNNN110T2gPjvxAUIQfCIrwA0ERfiAowg8ERfiBoAg/EBTj/Jla\nX5+9Y8eOqrVVq1Ylt33iiSca6qkT9PSkv5px8eLFyfrcuXPzbAc54sgPBEX4gaAIPxAU4QeCIvxA\nUIQfCIrwA0FZrfu581QqlbxcLrdtf0A0pVJJ5XI5/SUMGY78QFCEHwiK8ANBEX4gKMIPBEX4gaAI\nPxBUzfCb2dVmtt3M3jez/Wb2d9nyZ8zssJntyn64cRsYQur5Mo9zkn7s7jvNbLSk98zstaz2vLs/\n17r2ALRKzfC7e5+kvuzxKTM7IGl8qxsD0FoX9ZnfzCZK+p6kd7NFPzKzPWa2xsyuqLLNIjMrm1m5\nv7+/qWYB5Kfu8JvZdyStl7TY3U9KWiHpWknTVHln8NPBtnP3XncvuXupu7s7h5YB5KGu8JvZJaoE\n/9fuvkGS3P2ou5939z9I+qWk6a1rE0De6jnbb5JWSzrg7j8bsHzcgNXukrQv//YAtEo9Z/tnSfqB\npL1mtitb9hNJ95rZNEku6aCkH7akQwAtUc/Z/rckDXZ/8Kb82wHQLlzhBwRF+IGgCD8QFOEHgiL8\nQFCEHwiK8ANBEX4gKMIPBEX4gaAIPxAU4QeCIvxAUIQfCKqtU3SbWb+kzwYsGivpeNsauDid2lun\n9iXRW6Py7O0ad6/r+/LaGv5v7Nys7O6lwhpI6NTeOrUvid4aVVRvvO0HgiL8QFBFh7+34P2ndGpv\nndqXRG+NKqS3Qj/zAyhO0Ud+AAUh/EBQhYTfzG43s/8xs4/N7KkieqjGzA6a2d5s2vFywb2sMbNj\nZrZvwLIuM3vNzD7Kfg86R2JBvXXEtO2JaeULfe06bbr7tn/mN7Nhkj6U9FeSDknaIeled3+/rY1U\nYWYHJZXcvfALQszs+5JOS/qVu/95tuxfJH3h7suy/zivcPd/6JDenpF0uuhp27PZpMYNnFZe0nxJ\nf6MCX7tEX/eogNetiCP/dEkfu/un7v57Sb+RNK+APjqeu78h6YsLFs+TtC57vE6VfzxtV6W3juDu\nfe6+M3t8StJX08oX+tol+ipEEeEfL+l3A54fUoEvwCBc0utm9p6ZLSq6mUH0uHtf9vhzST1FNjOI\nmtO2t9MF08p3zGvXyHT3eeOE3zfd4u7TJN0h6ZHs7W1H8spntk4aq61r2vZ2GWRa+T8q8rVrdLr7\nvBUR/sOSrh7wfEK2rCO4++Hs9zFJL6rzph4/+tUMydnvYwX380edNG37YNPKqwNeu06a7r6I8O+Q\nNNnMvmtml0paIGljAX18g5ldlp2IkZldJmmOOm/q8Y2SFmaPF0p6qcBevqZTpm2vNq28Cn7tOm66\ne3dv+4+kuaqc8f9E0j8W0UOVvq6VtDv72V90b5JeUOVt4JeqnBt5SNKVkrZK+kjS65K6Oqi3f5O0\nV9IeVYI2rqDeblHlLf0eSbuyn7lFv3aJvgp53bi8FwiKE35AUIQfCIrwA0ERfiAowg8ERfiBoAg/\nENT/AyUflf612t6bAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x2a909cf8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -344,8 +352,8 @@
     "\n",
     "model = load_model('wm_2_acc_828.h5')\n",
     "index = np.random.randint(0, train_images.shape [0])\n",
-    "input = \n",
-    "p = np.argmax(model.predict(prepare_image(train_images [index:index + 1]))\n",
+    "input_data = prepare_images(train_images [index:index + 1])\n",
+    "p = np.argmax(model.predict(input_data))\n",
     "\n",
     "print(\"Predicted:\", p)\n",
     "plot_image(train_images, train_labels, index)"
